--- a/app/views/games/_upvote_challenge.html.erb
+++ b/app/views/games/_upvote_challenge.html.erb
@@ -1,1 +1,1 @@
-<%= link_to "<i class=\"fa fa-flag agree\"></i>".html_safe, challenge_votes_url(user_id: current_user.id, challenge_id: challenge.id, vote: true, game_id: challenge.game_id, format: :js), remote: true, method: 'post', :id => "challenge-agree-#{challenge.id}" %>
+<%= link_to "<i class=\"fa fa-thumbs-up agree\"></i>".html_safe, challenge_votes_url(user_id: current_user.id, challenge_id: challenge.id, vote: true, game_id: challenge.game_id, format: :js), remote: true, method: 'post', :id => "challenge-agree-#{challenge.id}" %>
