about to make changes

--- a/app/views/call_votes/_vote_counter.html.erb
+++ b/app/views/call_votes/_vote_counter.html.erb
@@ -1,5 +1,6 @@
-<span id="score-<%= call.id %>">
-  - <%= call.downvotes.count %>
+ <span id="score-<%= call.id %>">
+  <% if call.downvotes.count > 0 %>
+    -
+  <% end %>
+  <%= call.downvotes.count %>
 </span>
-
-
