--- a/app/views/challenge_votes/_vote_counter.html.erb
+++ b/app/views/challenge_votes/_vote_counter.html.erb
@@ -1,3 +1,6 @@
 <span id="score-<%= challenge.id %>">
-  +<%= challenge.upvotes.count %>
+  <% if challenge.upvotes.count > 0 %>
+    +
+  <% end %>
+  <%= challenge.upvotes.count %>
 </span>
