--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -30,4 +30,8 @@
   <%= @user.description %>
 </p>
 
+<p>
+  <b>Score:</b>
+  <%= @user.score %>
+</p>
 <%= link_to 'Edit Profile', edit_user_url %>
