--- a/app/views/challenge_votes/create.js.erb
+++ b/app/views/challenge_votes/create.js.erb
@@ -1,2 +1,4 @@
-$('.like-challenge-<%= @challenge_vote.challenge_id %>').replaceWith('<%= j(render 'games/upvote_challenge', challenge: @challenge_vote.challenge) %>');
-$('#score-<%= @challenge_vote.challenge.id %>').replaceWith('<%= j(render 'challenge_votes/vote_counter', challenge: @challenge_vote.challenge) %>');
+<% publish_to '/games' do %>
+  $('#like-challenge-<%= @challenge_vote.challenge_id %>').replaceWith('<%= j(render 'upvote', challenge: @challenge_vote.challenge) %>');
+  $('#score-<%= @challenge_vote.challenge.id %>').replaceWith('<%= j(render 'vote_counter', challenge: @challenge_vote.challenge) %>');
+<% end %>
