--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,5 +1,9 @@
 <style type="text/css">
-.comments {
+  .time-ago {
+    color: gray;
+  }
+
+  .comments {
     background-color: #DDE1E6;
     border-radius: 5px;
     padding: 10px;
@@ -16,19 +20,9 @@
   }
 </style>
 
-<div class='comment'>
+  <div class='comment'>
   <p class='comment-material'>
     <%= link_to comment.user.username, user_url(comment.user.id) %>
     <%= comment.text %>
-    <p>
-      <% comment_ids = current_user.comment_votes.collect { |c| c.comment_id } %>
-      <% if comment_ids.include?(comment.id) %>
-        <%= render 'comments/upvote_comment', comment: comment %>
-      <% else %>
-        <%= link_to "<i class=\"fa fa-thumbs-o-up agree\"></i>".html_safe, comment_votes_url(user_id: current_user.id, comment_id: comment.id, game_id: comment.call.game_id, vote: true), method: 'post', remote: true, :class => "like-comment-#{comment.id}" %>
-      <% end %>
-      <%= render 'comment_votes/vote_counter', comment: comment %>
-      <%= time_ago_in_words(comment.created_at) %> ago
-    </p>
-  </p>
+  <p class='time-ago'><%= time_ago_in_words(comment.created_at) %> ago</p>
 </div>
