--- a/app/views/challenges/_form.html.erb
+++ b/app/views/challenges/_form.html.erb
@@ -4,9 +4,9 @@
   }
 </style>
 
-<div class="container">
+
   <div class="row">
-    <div class="col-lg-12">
+    <div class="col-lg-12 challenge-form">
       <div class="input-group margin-zero-auto">
         <%= form_for(@challenge) do |f| %>
           <div class="input-group">
@@ -21,5 +21,5 @@
       </div><!-- /input-group -->
     </div><!-- col-lg-6 -->
   </div> <!-- row -->
-</div><!-- container -->
+
 
