--- a/app/views/games/index.html.erb
+++ b/app/views/games/index.html.erb
@@ -80,7 +80,7 @@
 
   <div class="col-lg-12">
 <!--     <h1>Scoreboard</h1>
- -->    <div class="col-lg-4 pull-left users">
+ -->    <div class="col-xs-4 pull-left users">
       <h2>Best Fans</h2>
       <p>Prizes given out each week to the best fans!</p>
         <ul class='top_users'>
@@ -91,7 +91,7 @@
     </div>
 
 
-      <div class="col-lg-7 pull-right">
+      <div class="col-xs-7 pull-right">
         <h2>Today's Games</h2>
       <% @games.each do |game| %>
       <div class="game-container">
