--- a/app/views/games/show.mobile.erb
+++ b/app/views/games/show.mobile.erb
@@ -1,2 +1,6 @@
-
-
+<div class='container'>
+  <div class="row">
+    <div class='col-xs-3'><%= image_tag(@game.home_team.img_url) %> <h3>Miami Heat</h3></div>
+    <div class='col-xs-3 col-xs-offset-6'><%= image_tag(@game.away_team.img_url) %> <h3>Chicago Bulls</h3></div>
+  </div>
+</div>
