--- a/app/views/challenge_votes/_upvote.html.erb
+++ b/app/views/challenge_votes/_upvote.html.erb
@@ -1,3 +1,3 @@
 <%#= link_to "<i class=\"fa fa-thumbs-up agree\"></i>".html_safe, challenge_votes_url(user_id: current_user.id, challenge_id: challenge.id, vote: true, game_id: challenge.game_id, format: :js), remote: true, method: 'post', :id => "challenge-agree-#{challenge.id}" %>
 
-<div class='flag'><%= link_to "<i class=\"fa fa-thumbs-up\"></i>".html_safe, challenge_votes_url(user_id: current_user.id, call_id: challenge.id, game_id: challenge.game_id, vote: false), remote: true, method: 'post', :class => 'disagree', :id => "challenge-disagree-#{challenge.id}" %></div>
+<div class='flag'><i class="fa fa-thumbs-up disagree"></i></div>
