--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -1,4 +1,8 @@
   <style type="text/css">
+  .container {
+    background: url(/assets/line-background.png) repeat-y 50%;
+  }
+
   .challenge-form {
     margin-bottom: 15px;
   }
@@ -38,24 +42,12 @@ body {
   background: white;
   padding: 20px;
   position: relative;
-  border-bottom: 7px solid #bbb;
 }
 
 .row {
-  margin: 0;
+  margin: 20px;
   text-align: center;
   padding: 0 50px;
-}
-
-.left {
-  border-right: 7px solid #bbb;
-
-/*   hack to line-up center line */
-  margin-left: 7px;
-}
-
-.right {
-  border-left: 7px solid #bbb;
 }
 
 .center {
