--- a/app/views/layouts/application.mobile.erb
+++ b/app/views/layouts/application.mobile.erb
@@ -3,10 +3,10 @@
 <head>
   <title>TFCV3-MOBILE</title>
   <%= csrf_meta_tags %>
+  <link rel="stylesheet" href="http://code.jquery.com/mobile/1.3.2/jquery.mobile-1.3.2.min.css" />
+  <script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
+  <script src="http://code.jquery.com/mobile/1.3.2/jquery.mobile-1.3.2.min.js"></script>
   <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css">
-  <script type="http://code.jquery.com/jquery-2.0.1.min.js"></script>
-  <%= stylesheet_link_tag "ratchet.css", media: "all", "data-turbolinks-track" => true %>
-  <%= javascript_include_tag "ratchet.js", media: "all", "data-turbolinks-track" => true %>
   <%= stylesheet_link_tag "mobile", media: "all", "data-turbolinks-track" => true %>
   <link href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
   <meta name="viewport" content="width=device-width">
@@ -14,48 +14,8 @@
 </head>
 <body>
   <% if current_user.present? %>
-    <nav class="bar-tab">
-      <ul class="tab-inner">
-        <li class="tab-item">
-          <%= link_to "<i class=\"fa fa-home\"></i>".html_safe, games_url  %>
-        </li>
-        <li class="tab-item">
-          <%= link_to "Full Site", :mobile => 0 %>
-        </li>
-        <li class="tab-item">
-          <%= link_to "Log Out", "#" %>
-        </li>
-      </ul>
-    </nav>
-  <% else %>
-    <div class="navbar navbar navbar-fixed-top" role="navigation">
-      <div class="container">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="#">Project name</a>
-        </div>
-        <div class="navbar-collapse collapse">
-          <%= form_tag session_url, method: 'post', class: 'navbar-form navbar-right' do %>
-            <div class='form-group'>
-              <%= label_tag 'username', 'Username:', class: 'sr-only' %>
-              <%= text_field_tag 'username', nil, class: 'form-control', placeholder: 'Username' %>
-            </div>
-            <div class='form-group'>
-              <%= label_tag 'password', 'Password:', class: 'sr-only' %>
-              <%= password_field_tag 'password', nil, class: 'form-control', placeholder: 'Password' %>
-            </div>
-              <%= submit_tag 'Sign In', class: 'btn btn-danger' %>
-          <% end %>
-        </div><!--/.navbar-collapse -->
-      </div>
-    </div>
+    <%= link_to "Log Out", sessions_url %>
   <% end %>
-
   <%= yield %>
 
 </body>
